--- a/css/styles.css
+++ b/css/styles.css
@@ -97,12 +97,6 @@ span {
 .image {
     width: 100%;
 }
-.overlay {
-    position: fixed;
-    background: rgba(121, 7, 194, .5);
-    width: 54rem;
-    height: 44.6rem;
-}
 .background {
     background-image: url(../images/image-header-desktop.jpg);
     background-size: contain;
@@ -110,7 +104,15 @@ span {
     height: 44.6rem;
     border-top-right-radius: 1rem;
     border-bottom-right-radius: 1rem;
+    overflow: hidden;
 }
+.overlay {
+    position: absolute;
+    background: rgba(121, 7, 194, .5);
+    width: 54rem;
+    height: 44.6rem;
+}
+
 
 /* MEDIA QUERIES */
 @media (max-width: 37.5rem) {
@@ -124,6 +126,7 @@ span {
     .background {
         background-image: url(../images/image-header-mobile.jpg);
         border-top-left-radius: 1rem;
+        width: 100%;
         height: 24.5rem;
     }
     .overlay {
